2005-10-21  Atsushi Enomoto  <atsushi@ximian.com>

	* UriBuilder.cs : ToString() should not add duplicate '/' before path.
	  Fixed bug #76501. Patch by Hubert Fongarnand + modified a bit.

2005-10-18  Sebastien Pouliot  <sebastien@ximian.com>

	* UriTypeConverter.cs: New. Implemented (2.0).

2005-10-17  Sebastien Pouliot  <sebastien@ximian.com>

	* GenericUriParserOptions.cs: New. 2.0 enum.
	* UriBuilder.cs: Port == -1 is valid (default) in 2.0. Default name
	is "localhhost" (not loopback) in 2.0. Fixed case where the Password
	property could be null (instead of String.Empty).
	* UriComponents.cs: New. 2.0 enum.
	* UriFormat.cs: New. 2.0 enum.
	* UriFormatException.cs: Added comments about GetObjectData.
	* UriKind.cs: New. 2.0 enum.
	* UriPartial.cs: Added Query value for 2.0.

2005-08-16  Daniel Drake  <dsd@gentoo.org>

	* Uri.cs: Various parsing fixes from bug #75144.

2005-07-09  Gert Driesen  <drieseng@users.sourceforge.net>

	* Uri.cs: Modified fix for bug #71053 to match both MS.NET 1.x and
	2.0 behaviour. Parse method is no longer used on MS.NET 2.0, marked 
	obsolete.

2005-07-09  Gert Driesen  <drieseng@users.sourceforge.net>

	* Uri.cs: in .NET 2.0, port number should be valid UInt16 instead of
	UInt32. If outcome of parsing is -1, do not consider this to be the
	default port.

2005-07-08  Daniel Drake  <dsd@gentoo.org>

	* Uri.cs: Allow descent multiple times below root. Fixes bug #71053.

2005-07-02  Daniel Drake  <dsd@gentoo.org>

	* Uri.cs: HexUnescape() should only work on single-byte escape
	sequences, ala HexEscape(). However, we still want to handle multi-byte
	sequences internally, so introduce a more correct implementation of
	multi-byte unescaping, HexUnescapeMultiByte(). Fixes bug #74872.

2005-06-11 Gert Driesen <drieseng@users.sourceforge.net>

	* Uri.cs: Domain address might have trailing period to indicate
	that the domain name is fully qualified. Fixes bug #75230.

2005-06-02 Gert Driesen <drieseng@users.sourceforge.net>
