@@ -1,3 +1,9 @@
+2005-11-14  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* UriTest.cs : Added test for bug #76643. Also commented non-2.0 test
+	  out in TestUnixLocalPath_WTF() since we don't emulate Microsoft's
+	  idiotic behavior.
+
 2005-10-21  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* UriBuilderTest.cs : added test for bug #76501.
